Fix table overflow-x on mobile

--- a/res/mahjong.css
+++ b/res/mahjong.css
@@ -67,3 +67,8 @@ th, td {
   border: 1px solid black;
   padding: 0.4em;
 }
+
+
+.wide {
+  overflow-x: auto;
+}
